ladminai-appointment/main/default/objects/Resource_Availability__c/fields/Availability_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Availability_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Availability Schedule</label>
    <referenceTo>Resource_Availability_Schedule__c</referenceTo>
    <relationshipLabel>Resource Availabilities</relationshipLabel>
    <relationshipName>Resource_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>