ladminai-appointment/main/default/objects/Resource_Availability__c/fields/Break_End__c.field-meta.xml
<CustomField>
    <fullName>Break_End__c</fullName>
    <label>Break End</label>
    <type>Time</type>
</CustomField>