ladminai-appointment/main/default/objects/Resource_Availability__c/fields/Break_Start__c.field-meta.xml
<CustomField>
    <fullName>Break_Start__c</fullName>
    <label>Break Start</label>
    <type>Time</type>
</CustomField>