ladminai-appointment/main/default/objects/Resource_Availability__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location for this doctor's weekly availability. Null preserves legacy availability.</description>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Resource Availability</relationshipLabel>
    <relationshipName>Resource_Availability</relationshipName>
    <type>Lookup</type>
</CustomField>