ladminai-appointment/main/default/objects/Resource_Availability__c/fields/Override_Key__c.field-meta.xml
<CustomField>
    <fullName>Override_Key__c</fullName>
    <externalId>true</externalId>
    <label>Override Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>