ladminai-appointment/main/default/objects/Resource_Availability__c/fields/Override_Type__c.field-meta.xml
<CustomField>
    <fullName>Override_Type__c</fullName>
    <label>Override Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Unavailable</fullName><default>false</default><label>Unavailable / Holiday</label></value>
            <value><fullName>Custom Hours</fullName><default>false</default><label>Custom Hours</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>