ladminai-appointment/main/default/objects/Resource_Availability__c/fields/Resource_Day_Key__c.field-meta.xml
<CustomField>
    <fullName>Resource_Day_Key__c</fullName>
    <externalId>true</externalId>
    <label>Resource Day Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>