ladminai-appointment/main/default/objects/Resource_Availability__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>Service_Resource__c</referenceTo>
    <relationshipLabel>Resource Availabilities</relationshipLabel>
    <relationshipName>Resource_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>